# rm_robot

./: README.md  rm_install_package.sh
rm_65_6f_description/: CMakeLists.txt  package.xml
rm_65_6f_description/launch/: display(复件).launch  display.launch
rm_65_6f_description/urdf/: rm_65_6f.urdf.xacro  rm_65_6f_description.csv  rm_65_6f_description.urdf
rm_65_6f_moveit_config/: .setup_assistant  package.xml
rm_65_6f_moveit_config/config/: rm_65_6f.srdf
rm_65_6f_moveit_config/launch/: demo_gazebo.launch  gazebo.launch  move_group.launch  moveit_planning_execution.launch  planning_context.launch  rm_65_6f_moveit_controller_manager.launch.xml  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch(复件).xml  trajectory_execution.launch.xml
rm_65_demo/: CMakeLists.txt  package.xml
rm_65_demo/launch/: planning_scene_ros_api_demo.launch
rm_65_demo/scripts/: moveit_obstacles_demo.py
rm_65_demo/src/: api_Get_Arm_State_demo.cpp  api_moveJ_demo.cpp  api_teach_demo.cpp  pick_place_demo.cpp  test_api_movel.cpp
rm_65_description/: CMakeLists.txt  package.xml
rm_65_description/config/: joint_names_rm_65_description.yaml  rm_65_urdf.rviz
rm_65_description/launch/: display.launch  display_rm65.launch  display_y_90.launch  gazebo.launch  gazebo_rm65.launch
rm_65_description/urdf/: common.gazebo.xacro  rm_65.urdf  rm_65.urdf.xacro  rm_65_description.csv  rm_65_description.urdf  rm_65_y_90.urdf.xacro
rm_65_moveit_config/: .setup_assistant  package.xml
rm_65_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  rm_65.srdf  ros_controllers.yaml
rm_65_moveit_config/launch/: default_warehouse_db.launch  demo.launch  demo_gazebo.launch  demo_realrobot.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_planning_execution.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  rm_65_moveit_controller_manager.launch.xml  ros_controllers.launch  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
rm_65_robot/: CMakeLists.txt  package.xml
rm_arm_examples/control_arm_move/: CMakeLists.txt  README.md  package.xml
rm_arm_examples/control_arm_move/launch/: rm_65_move_demo.launch  rm_75_move_demo.launch
rm_arm_examples/control_arm_move/src/: api_move_demo.cpp
rm_arm_examples/force_position_control/: CMakeLists.txt  README.md  package.xml
rm_arm_examples/force_position_control/launch/: force_position_control_demo.launch
rm_arm_examples/force_position_control/src/: api_force_position_control_demo.cpp
rm_arm_examples/get_arm_state/: CMakeLists.txt  LICENSE  README.md  package.xml
rm_arm_examples/get_arm_state/launch/: get_arm_state_demo.launch
rm_arm_examples/get_arm_state/src/: api_Get_Arm_State_demo.cpp
rm_bringup/launch/: rm_63_6f_robot.launch  rm_63_6fb_robot.launch  rm_63_III_6fb_robot.launch  rm_63_III_robot.launch  rm_63_robot.launch  rm_65_6f_robot.launch  rm_65_6fb_robot.launch  rm_65_robot.launch  rm_75_6f_robot.launch  rm_75_6fb_robot.launch  rm_75_robot.launch  rm_eco63_6fb_robot.launch  rm_eco63_robot.launch  rm_eco65_6f_robot.launch  rm_eco65_6fb_robot.launch  rm_eco65_robot.launch  rm_gen72_II_robot.launch  rm_gen72_robot.launch  rm_robot.launch  rm_robot_6f.launch
rm_control/launch/: rm_eco63_control.launch  rm_gen72_control.launch
rm_control/src/: rm_control.cpp
rm_demo/: CMakeLists.txt  package.xml
rm_demo/launch/: planning_scene_ros_api_demo.launch
rm_demo/scripts/: getHSV.py  moveit_plan_and_stop.py  rm_63_moveit_obstacles_demo.py  rm_75_moveit_obstacles_demo.py  rm_eco65_moveit_obstacles_demo.py  rm_gen72_moveit_obstacles_demo.py  test_rgb.py
rm_demo/src/: api_ChangeToolName_demo.cpp  api_ChangeWorkFrame_demo.cpp  api_Get_Arm_State_demo.cpp  api_eco63_pick_place_demo.cpp  api_eco65_pick_place_demo.cpp  api_gen72_moveJ_P_demo.cpp  api_gen72_moveL_demo.cpp  api_gen72_pick_place_demo.cpp  api_getArmCurrentState.cpp  api_moveJ_P_demo.cpp  api_moveJ_demo.cpp  api_moveL_demo.cpp  api_rm65_pick_place_demo.cpp  api_rm75_pick_place_demo.cpp  api_rml63_pick_place_demo.cpp  arm_63_planning_scene_ros_api_demo.cpp  arm_eco65_planning_scene_ros_api_demo.cpp  arm_gen72_planning_scene_ros_api_demo.cpp  test_api_movel.cpp
rm_description/config/: ECO63.rviz  GEN72.rviz  RML63.rviz
rm_doc/: CMakeLists.txt  package.xml
rm_driver/: CMakeLists.txt  package.xml
rm_driver/launch/: rm_63_driver.launch  rm_65_driver.launch  rm_75_driver.launch  rm_eco63_driver.launch  rm_eco65_driver.launch  rm_gen72_driver.launch
rm_driver/src/: rm_driver.cpp  rm_robot.h
rm_gazebo/: package.xml
rm_gazebo/launch/: arm_63_6fb_bringup_moveit.launch  arm_63_III_6fb_bringup_moveit.launch  arm_63_III_bringup_moveit.launch  arm_63_bringup_moveit.launch  arm_65_6fb_bringup_moveit.launch  arm_65_bringup_moveit.launch  arm_75_6fb_bringup_moveit.launch  arm_75_bringup_moveit.launch  arm_eco63_6fb_bringup_moveit.launch  arm_eco63_bringup_moveit.launch  arm_eco65_6fb_bringup_moveit.launch  arm_eco65_bringup_moveit.launch  arm_gazebo_states.launch  arm_gen72_II_bringup_moveit.launch  arm_gen72_bringup_moveit.launch  arm_world.launch
rm_install/: 安装脚本使用说明.txt
rm_moveit_config/rm_65_6f_moveit_config/: .setup_assistant  CMakeLists.txt
rm_moveit_config/rm_65_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
rm_moveit_config/rm_75_6f_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
rm_moveit_config/rm_75_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
rm_moveit_config/rm_eco63_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
rm_moveit_config/rm_eco65_6f_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
rm_moveit_config/rm_eco65_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
rm_moveit_config/rm_gen72_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
rm_moveit_config/rml_63_6f_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
rm_msgs/: CMakeLists.txt
rm_msgs/msg/: ArmState.msg  (+63 more)
rm_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+360 files in other folders)
